# LevelUp

./: .gitignore  CMakeLists.txt  LICENSE  task1.cpp  task2.cpp  task3.cpp  task4.cpp
HomeWork_1/: task1.cpp  task1.hpp  task2.cpp  task2.hpp
HomeWork_1/tests/: CMakeLists.txt  test_of_one.cpp
HomeWork_2/: task1.cpp  task1.hpp  task2.cpp  task2.hpp  task3.cpp
HomeWork_3/: CMakeLists.txt  task1.cpp  task1.hpp  task2.cpp  task2.hpp  task3.cpp  task3.hpp  task4.cpp  task4.hpp  task5.cpp  task5.hpp
HomeWork_4/: task1.hpp  task2.cpp  task2.hpp  task3.cpp  task3.hpp  task4.cpp  task4.hpp  task5.cpp  task5.hpp  task6.cpp  task6.hpp  task_1.cpp
tests/: CMakeLists.txt  Task_3_1_test.cpp  Task_3_2_test.cpp
