cmake_minimum_required(VERSION 3.22)

project(LevelUp)

set(CMAKE_CXX_STANDARD 20)

add_executable(LevelUp
     #   HomeWork_1/task1.cpp
     #   HomeWork_1/task2.cpp
     #   HomeWork_2/task3.cpp
      #  HomeWork_2/task4.cpp
       # HomeWork_3/task1.cpp
        #HomeWork_3/task2.cpp
        #HomeWork_3/task3.cpp
       #HomeWork_3/task4.cpp
  #      HomeWork_3/task5.cpp
 #       HomeWork_4/task_1.cpp
  #      HomeWork_4/task2.cpp
   #     HomeWork_4/task3.cpp
    #    HomeWork_4/task4.cpp
   #     HomeWork_4/task5.cpp
        HomeWork_4/task6.cpp HomeWork_1/tests/test_of_one.cpp HomeWork_1/task1.cpp HomeWork_1/task1.hpp HomeWork_1/task2.cpp HomeWork_1/task2.hpp HomeWork_2/task1.cpp HomeWork_2/task1.hpp HomeWork_2/task2.cpp HomeWork_2/task2.hpp HomeWork_3/task2.hpp HomeWork_3/task1.hpp HomeWork_3/task3.hpp HomeWork_3/task4.hpp HomeWork_3/task5.hpp HomeWork_4/task2.hpp HomeWork_4/task1.hpp HomeWork_4/task3.hpp HomeWork_4/task4.hpp HomeWork_4/task5.hpp HomeWork_4/task6.hpp HomeWork_1/tests/test_of_two.cpp)

